--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -20,14 +20,14 @@ jobs:
         with:
           github_user_name: Michael315-mk
           
+          # Novo output com a paleta "Ice & Onyx"
           outputs: |
-            dist/snake-dracula.svg?palette=dracula&color_snake=#BD93F9&color_dots=#50FA7B,#6272A4,#BD93F9
-            dist/snake-dracula-chromatic.svg?palette=dracula&color_snake=#FF79C6&color_dots=#50FA7B,#6272A4,#BD93F9
-      
+            dist/snake-ice-onyx.svg?palette=github-dark&color_snake=#7DF9FF&color_dots=#c6e48b,#7bc96f,#239a3b,#196127
+
       - name: Auto-commit Snake animation
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          commit_message: "chore: update github snake animation for dracula theme"
+          commit_message: "chore: update github snake (ice & onyx theme)"
           file_pattern: dist/*.svg
           commit_user_name: "github-actions[bot]"
           commit_user_email: "github-actions[bot]@users.noreply.github.com"
